<resources>
    <string name="app_name">Pedmeter</string>
    <string name="app_name1">Pedmeter</string>
    <string name="app_name2">Pedmeter</string>
    <string name="app_name3">Pedmeter</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">分享到微信</string>

    <!-- strings related to content——main-->
    <string name="tab_contact">分析</string>
    <string name="tab_found">嗯嗯</string>
    <string name="tab_me">我</string>


    <!--<string name="step_history_step">总步数</string>-->
    <!--string related to hide in left-->

    <string name="totalStep">总步数（步）:</string>
    <string name="totalDistance">总距离（米）:</string>
    <string name="totalCalories">总卡路里（大卡）:</string>

    <string name="historyStep">步数历史</string>
    <string name="historyCalorie">热量历史</string>
    <string name="historyDistance">距离历史</string>

    <string name="setting">设置</string>

    <string name="aboutMe">关于</string>
    <string name="donate">打赏</string>


    <!--<string name="DevelopName">开发者:</string>-->
    <!--<string name="DevelopName_answer">youyouza</string>-->
    <!--<string name="DevelopEmail">联系开发者:</string>-->
    <!--<string name="DevelopEmail_answer">zhuan66yong@163.com</string>-->
    <!--<string name="DevelopDonate">支持开发者(支付宝):</string>-->
    <!--<string name="DevelopDonate_answer">zhuan66yong@163.com</string>-->
    <!--<string name="DevelopAnnounce_answer">本软件最终解释权归youyouza所有</string>-->
    <!--<string name="DevelopAnnounce">声明:</string>-->

    <!--<string name="DevelopProductManager">产品经理:</string>-->
    <!--&lt;!&ndash;<string name="PM">youyouza</string>&ndash;&gt;-->
    <!--<string name="PM">Luo</string>-->
    <string name="DevelopName">开 发 者:youyouza</string>
    <string name="DevelopName_answer">youyouza</string>
    <string name="DevelopEmail">联系开发者:zhuan66yong@163.com</string>
    <string name="DevelopEmail_answer">zhuan66yong@163.com</string>
    <string name="DevelopDonate">支持开发者(支付宝):zhuan66yong@163.com</string>
    <string name="DevelopDonate_answer">zhuan66yong@163.com</string>
    <string name="DevelopAnnounce_answer">本软件最终解释权归youyouza所有</string>
    <string name="DevelopAnnounce">声   明:本软件最终解释权归youyouza所有</string>

    <string name="DevelopProductManager">产品经理:Luo</string>
    <!--<string name="PM">youyouza</string>-->
    <string name="PM">Luo</string>


    <!--string related to setting in hide side-->
    <string name="cleanData">清除数据</string>
    <string name="cleanData_oneMonth">清除一个月以前数据</string>
    <string name="cleanData_threeMonth">清除三个月以前数据</string>
    <string name="cleanData_sixMonth">清除六个月以前数据</string>
    <string name="cleanData_total">清除所有以前数据</string>


    <string name="systemSetting_name">系统设置</string>
    <string name="systemSetting_start">是否自启动</string>
    <string name="systemSetting_start_on">是自启动</string>
    <string name="systemSetting_start_off">否自启动</string>


<!--about history_step-->

    <string name="start">选择起始时间</string>
    <string name="end">选择终止时间</string>



    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>


    <string name="welcome1">welcome to frist1!</string>
    <string name="welcome2">welcome to frist2!</string>
    <string name="welcome3">welcome to frist3!</string>
    <string name="welcome4">welcome to frist4!</string>
    <string name="getStart">进入应用</string>


    <string name="startBtn">启动服务</string>
    <string name="stopBtn">停止服务</string>
    <string name="title_activity_donate">DonateActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
