<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <group android:checkableBehavior="single">
        <item android:title="show">
            <menu>
        <item
            android:id="@+id/historyStep"
            android:title="@string/historyStep"
            android:icon="@drawable/chart1"
            />
            <!--android:icon="@drawable/ic_menu_camera"-->
        <item
            android:id="@+id/historyDistance"
            android:title="@string/historyDistance"
            android:icon="@drawable/chart2"/>
            <!--android:icon="@drawable/ic_menu_gallery"-->

        <item
            android:id="@+id/historyCalorie"
            android:title="@string/historyCalorie"
            android:icon="@drawable/chart3"/>
            <!--android:icon="@drawable/ic_menu_slideshow"-->


            <!--android:icon="@drawable/ic_menu_manage"-->
            </menu>
        </item>

    </group>


    <item android:title="setting">
        <menu>
            <item
                android:id="@+id/setting"
                android:title="@string/setting"
                android:icon="@drawable/setting_icon"/>

        </menu>

    </item>

    <item android:title="about">
        <menu>
            <item
                android:id="@+id/donate"
                android:title="@string/donate"
                android:icon="@drawable/donate"/>
                <!--android:icon="@drawable/ic_menu_share"-->

            <item
                android:id="@+id/aboutMe"
                android:title="@string/aboutMe"
                android:icon="@drawable/aboutme"/>
                <!--android:icon="@drawable/ic_menu_send"-->

        </menu>
    </item>

</menu>
