<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <HorizontalScrollView
        android:id="@+id/hscrollview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <org.eazegraph.lib.charts.BarChart
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/barchart_history_calories"
            android:layout_width="512dp"
            android:layout_height="256dp"
            android:padding="0dp"
            app:egBarWidth="15dp"
            app:egLegendTextSize="10dp"
            app:egLegendHeight="30dp"/>


            <!--<TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="123123133"/>-->
        </LinearLayout>

    </HorizontalScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp"

        >
        <!--android:layout_gravity="bottom"-->
        <!--android:paddingTop="20pt"-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/totalCalories"
            android:textSize="20dp"
            android:paddingRight="5dp"/>
        <!--android:padding="20dp"-->
        <org.eazegraph.lib.charts.VerticalBarChart
            android:id="@+id/verbarchart_history_calories"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            app:egBarWidth="20dp"
            app:egLegendHeight="0dp"
            app:egShowValues="true"
            app:egFixedBarWidth="true"
            app:egShowBarLabel="true"
            app:egLegendColor="#FFFFFF"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:padding="5dp"
        android:gravity="center"
        >


        <TextView
            android:id="@+id/chooseBeginShow_calories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/horizonal"
            />

        <TextView
            android:id="@+id/chooseEndShow_calories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/end"
            />
    </LinearLayout>


    <android.support.design.widget.FloatingActionButton
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/fab_history_calories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:backgroundTint="#4CAF50"
        app:rippleColor="#33728dff"
        android:layout_gravity="right"
        app:fabSize="mini"
        app:elevation="6dp"
        android:src="@android:drawable/ic_popup_sync" />


</LinearLayout>